UNRW-731: Fixed cutoff on ipads.

--- a/source/scss/components/organisms/_overview-widget.scss
+++ b/source/scss/components/organisms/_overview-widget.scss
@@ -129,6 +129,7 @@
     @include eq('cols2') {
       @include columns(2);
       margin-bottom: $base-line-em;
+      display: inline-block;
     }
     @include breakpoint($bp--overview-2col) {
       max-height: 100em;
